--- a/FirstCode/broadcast_forceoffline/src/main/res/values/strings.xml
+++ b/FirstCode/broadcast_forceoffline/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">broadcast_forceOffLine</string>
+    <string name="app_name">forceOffLine-broadCast</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
